welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:9: error: not found: value Mathabs
else if (Math.abs(n)<=200 && Mathabs(n)>=190) {
                             ^