welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {


if (Math.abs(n)<=100 && Math.abs(n)>=90) {
	
	return true

}
else if (Math.abs(n)<=200 && Mathabs(n)>=190) {

	return true
	
}else{

return false	
	
}
}
